# stockwatch

./: .gitignore  .pylintrc  LICENSE  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: stockwatch-tests.yml
scripts/: run_checks.py
src/stockwatch/: __init__.py  __main__.py  adapters.py  analysis.py  dashboard.py  entities.py  run.py  stockwatch.py  use_cases.py
src/stockwatch/app/: __init__.py  dashboard.py  ids.py  layout.py  plotting.py  runtime.py  scraping.py
src/stockwatch/app/assets/: dbc.css
src/stockwatch/app/pages/: __init__.py  about.py  index.py  plots.py  portfolio.py  returns.py  scraping.py
src/stockwatch/app/runtime/: scraping.py
src/stockwatch/config/: __init__.py  config.py  stockwatch.toml
src/stockwatch/entities/: __init__.py  currencies.py  money.py  shares.py  transactions.py
src/stockwatch/entities2/: __init__.py  currencies.py  shares.py  transactions.py
src/stockwatch/run/: __init__.py  console.py  dash.py
src/stockwatch/scraping/: __init__.py  run.py
src/stockwatch/use_cases/: __init__.py  config.py  configuring.py  configuring_base.py  degiro.py  importing.py  stockdir.py
stockwatch/: stockwatch.py
tests/: test_config.py  test_entities.py  test_entities_currencies.py  test_entities_exchanges.py  test_entities_money.py  test_entities_shares.py  test_entities_transactions.py  test_exchanges.py  test_stockdir.py  test_stockwatch.py
tests/app/: test_runtime.py  test_scraping.py
