[tool.poetry]
name = "stockwatch"
version = "0.1.0"
description = ""
authors = ["Theo de Vries <t.j.a.devries@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.1.0"
mypy = "^0.931"
tox = "^3.24.5"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
rstcheck = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
