[tool.poetry]
name = "stockwatch"
version = "0.1.0"
description = ""
authors = ["Theo de Vries <t.j.a.devries@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.6.0"
dash = "^2.2.0"
types-requests = "^2.27.15"
dash-bootstrap-components = "^1.0.3"
dash-extensions = "^0.1.6"
dash-bootstrap-templates = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.1.0"
mypy = ">=0.942"
tox = "^3.24.5"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
rstcheck = "^3.3.1"
isort = "^5.10.1"
pylint = "^2.13.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "dash_bootstrap_components.*",
    "dash_bootstrap_templates.*",
    "dash_extensions.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pylint.main]
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.code_style",
    "pylint.extensions.typing",
    "pylint.extensions.no_self_use",
]

[tool.pylint.messages_control]
# Reasons disabled:
# format - handled by black
# wrong-import-order - isort guards this
# fixme - too handy for now
disable = [
    "fixme",
    "format",
    "wrong-import-order",
]
enable = [
    "useless-suppression",
    "use-symbolic-message-instead",
]

[tool.pylint.typecheck]
mixin-class-rgx = ".*[Mm]ix[Ii]n"

[tool.pylint.typing]
runtime-typing = false

[tool.pylint.similarities]
ignore-imports = "yes"
